JPMSPlugin handles --add-opens cmdline option